# kcm-gtk

./: CMakeLists.txt  Changelog  Messages.sh  gtkrcfile.cpp  gtkrcfile.h  kcm-gtk_0.5.3.orig.tar.gz.delta  kcm-gtk_0.5.3.orig.tar.gz.id  kcmgtk.cpp  kcmgtk.desktop  kcmgtk.h  kcmgtkwidget.ui  searchpaths.cpp  searchpaths.h  searchpaths.ui
debian/: changelog  control  copyright  rules  watch
debian/patches/: 01_kcm_category.patch  04_no_kde4_in_configfile.diff  05_dont_set_userfont.patch  series
po/: CMakeLists.txt
po/ast/: kcm_gtk.po
po/bg/: kcm_gtk.po
po/ca/: kcm_gtk.po
po/cs/: kcm_gtk.po
po/de/: kcm_gtk.po
po/es/: kcm_gtk.po
po/fi/: kcm_gtk.po
po/fr/: kcm_gtk.po
po/hu/: kcm_gtk.po
po/it/: kcm_gtk.po
po/ko/: kcm_gtk.po
po/nl/: kcm_gtk.po
po/nn/: kcm_gtk.po
po/pt_BR/: kcm_gtk.po
po/ru/: kcm_gtk.po
po/sv/: kcm_gtk.po
po/tr/: kcm_gtk.po
po/uk/: kcm_gtk.po
po/zh_CN/: kcm_gtk.po
