find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)
add_subdirectory(ast)
add_subdirectory(bg)
add_subdirectory(ca)
add_subdirectory(cs)
add_subdirectory(de)
add_subdirectory(es)
add_subdirectory(fi)
add_subdirectory(fr)
add_subdirectory(hu)
add_subdirectory(it)
add_subdirectory(ko)
add_subdirectory(nl)
add_subdirectory(nn)
add_subdirectory(pt_BR)
add_subdirectory(ru)
add_subdirectory(sv)
add_subdirectory(tr)
add_subdirectory(uk)
add_subdirectory(zh_CN)
